# dspy-gepa

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_test_llm_configuration.md  USAGE_GUIDE.md  USER_INTERFACE_IMPROVEMENTS.md  config.yaml  demonstrate_mutation_types.py  interface_demo.py  monitoring_demo.py  multi_objective_demo.py  multi_objective_gepa_architecture.md  optimize.py  pyproject.toml  simple_demo.py  single_objective_demo.py  test_interface_mock.py  test_llm_configuration.py  test_new_interface.py  test_optimization_debug.py  verify_implementation.py
.github/workflows/: ci.yml
examples/: 01_quick_start.py  02_llm_setup.py  03_basic_optimization.py  04_advanced_features.py  README.md  README_agent_interface_demo.md  basic_dspy_gepa.py  dspy_modules.py  language_model_setup.py  llm_enhanced_gepa_demo.py  quick_start_demo.py
examples/archive/: agent_interface_demo_old.py  dspy_gepa_optimization.py
examples/demos/: demonstrate_mutation_types.py  integration_demo.py
examples/dspy_integration/: README.md  dspy_example.py
src/dspy_gepa/: __init__.py  convenience.py  examples.py  gepa_agent.py  presets.py  simple_gepa.py  user_guide.py
src/dspy_gepa/amope/: __init__.py  adaptive_mutator.py  helper_methods.py  objective_balancer.py
src/dspy_gepa/core/: __init__.py  agent.py  analysis.py  error_handling.py  interfaces.py  monitoring.py  multi_objective_agent.py  multi_objective_gepa.py  mutation_engine.py  objectives.py  parameter_tuner.py  visualization.py
src/dspy_gepa/dspy_integration/: __init__.py  dspy_adapter.py  metric_collector.py  metric_converter.py  multi_objective_optimizer.py  program_parser.py  signature_analyzer.py
src/dspy_gepa/utils/: __init__.py  config.py  dependency_handler.py  enhanced_mutator.py  logging.py  patch_litellm.py
src/gepa/: __init__.py
src/gepa/core/: __init__.py  candidate.py  mutator.py  optimizer.py  selector.py
src/gepa/reflection/: __init__.py  lm_reflector.py
tests/: conftest.py  test_amope_gepa_integration.py  test_basic.py  test_final_integration.py  test_llm_configuration.py  test_optimization_workflows.py  test_readme_examples.py  test_readme_examples_working.py  test_readme_final.py  test_readme_verification.py  test_real_effectiveness.py
tests/end-to-end/: test_visualization_demo.py
tests/fixtures/: test_data.py
tests/integration/: test_architecture_compliance.py  test_configuration_integration.py  test_dspy_gepa_integration.py  test_end_to_end_workflows.py  test_multi_objective_compatibility.py  test_quick_start_demo.py
tests/test_core/: test_comprehensive_integration.py  test_monitoring_analysis.py  test_multi_objective_agent.py  test_visualization.py
tests/unit/: test_enhanced_mutator.py  test_error_handling.py  test_gepa_agent_functionality.py  test_simple_plot.py
